--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
     color: #5f9341;
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
+    align-items: center;
 }
 
 h1 {
@@ -52,9 +53,15 @@ button {
     background: #5f9341;
     color: white;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid #5f9341;
     font-weight: bold;
     border-radius: 10px;
+    margin: 0 auto;
+}
+
+#clear-all {
+    background: white;
+    color: #5f9341;
 }
 
 #box {
@@ -67,3 +74,4 @@ button {
     color: white;
     font-weight: bold;
 }
+
